--- a/index.html
+++ b/index.html
@@ -15,16 +15,10 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="styles.css" />
-    <title>Raj Shekhar</title>
+    <title>Andy Leo</title>
   </head>
   <body class="light" id="top">
     <header class="header center">
-      <h3>
-        <a href="https://rajshekhar26.github.io/cleanfolio-minimal" class="link"
-          >RS.</a
-        >
-      </h3>
-
       <nav class="nav center">
         <ul class="nav__list center">
           <li class="nav__list-item">
