--- a/index.html
+++ b/index.html
@@ -53,10 +53,11 @@
       <!-- About -->
       <div class="about center">
         <h1><span class="about__name">Andy Leo</span></h1>
-        <h2 class="about__role">Student in Finance</h2>
+        <h2 class="about__role">Finance Undergraduate</h2>
         <p class="about__desc">
-          I am a final year undergraduate Finance student looking to pursue graduate studies in Computer/Data Science and
-          Computational Finance.
+          I am keen to pursue graduate studies in Computer/Data Science and Computational Finance. 
+          Proficient in Python, I am actively expanding my skill set by learning R and C#. 
+          I also have experience with Stata and SQL.
         </p>
 
         <div class="about__contact center">
@@ -78,15 +79,15 @@
           <div class="project">
             <h3>S&P 500 Prediction</h3>
             <p class="project__description">
-              I perform sentiment analysis on tweets mentioning COVID-19 to see whether sentiment
-              is a good predictor for market movements.
+              Analyse sentiment for tweets mentioning COVID-19 to see whether sentiment
+              is a good predictor for the 2020 S&P 500 crash.
             </p>
             <ul class="project__stack">
               <li class="project__stack-item">Python</li>
             </ul>
 
             <a
-              href="https://github.com/anlydeo/projects"
+              href="https://github.com/anlydeo/projects/blob/main/Predict%20S%26P%20500%20Using%20Tweet%20Sentiment/tweets.ipynb"
               aria-label="source code"
               class="link link--icon"
             >
@@ -95,60 +96,39 @@
           </div>
 
           <div class="project">
-            <h3>Project 2</h3>
+            <h3>Breakout/Momentum Algotrading Strategy</h3>
             <p class="project__description">
-              Ipsum accusamus ea excepturi aliquid eligendi amet. Explicabo
-              sapiente debitis labore sed ipsam Mollitia repellat illum quod
-              unde beatae Quis
+              Bollinger squeeze strategy incorporating Keltner Channels. Algorithm identifies periods of low volatility 
+              for an asset, generating buy/sell signals based on subsequent price breakout directions.
             </p>
             <ul class="project__stack">
-              <li class="project__stack-item">SASS</li>
-              <li class="project__stack-item">TypeScript</li>
-              <li class="project__stack-item">React</li>
+              <li class="project__stack-item">Python</li>
             </ul>
 
             <a
-              href="https://github.com"
+              href="https://github.com/anlydeo/projects/blob/main/Bollinger-Keltner%20Squeeze/Bollinger-Keltner%20Squeeze%20Report.pdf"
               aria-label="source code"
               class="link link--icon"
             >
               <i aria-hidden="true" class="fab fa-github"></i>
-            </a>
-            <a
-              href="https://example.com"
-              aria-label="live preview"
-              class="link link--icon"
-            >
-              <i aria-hidden="true" class="fas fa-external-link-alt"></i>
             </a>
           </div>
 
           <div class="project">
-            <h3>Project 3</h3>
+            <h3>Option Pricing GUIs</h3>
             <p class="project__description">
-              Ipsum accusamus ea excepturi aliquid eligendi amet. Explicabo
-              sapiente debitis labore sed ipsam Mollitia repellat illum quod
-              unde beatae Quis
+              GUIs to price plain vanilla European and digital options using the Black-Scholes model
             </p>
             <ul class="project__stack">
-              <li class="project__stack-item">SASS</li>
-              <li class="project__stack-item">TypeScript</li>
-              <li class="project__stack-item">React</li>
+              <li class="project__stack-item">Python</li>
             </ul>
 
             <a
-              href="https://github.com"
+              href="https://github.com/anlydeo/projects/blob/main/QuantLib%20GUI%20Pricers/QuantLib%20Options%20Pricer%20GUI%20Report.pdf"
               aria-label="source code"
               class="link link--icon"
             >
               <i aria-hidden="true" class="fab fa-github"></i>
-            </a>
-            <a
-              href="https://example.com"
-              aria-label="live preview"
-              class="link link--icon"
-            >
-              <i aria-hidden="true" class="fas fa-external-link-alt"></i>
             </a>
           </div>
         </div>
@@ -158,18 +138,17 @@
       <section class="section skills" id="skills">
         <h2 class="section__title">Skills</h2>
         <ul class="skills__list">
-          <li class="skills__list-item btn btn--plain">HTML</li>
-          <li class="skills__list-item btn btn--plain">CSS</li>
-          <li class="skills__list-item btn btn--plain">SCSS</li>
-          <li class="skills__list-item btn btn--plain">JavaScript</li>
-          <li class="skills__list-item btn btn--plain">TypeScript</li>
-          <li class="skills__list-item btn btn--plain">React</li>
-          <li class="skills__list-item btn btn--plain">Redux</li>
+          <li class="skills__list-item btn btn--plain">Python</li>
+          <li class="skills__list-item btn btn--plain">R</li>
+          <li class="skills__list-item btn btn--plain">Stata</li>
+          <li class="skills__list-item btn btn--plain">SQL</li>
+          <li class="skills__list-item btn btn--plain">C#</li>
+          <li class="skills__list-item btn btn--plain">Power BI</li>
+          <li class="skills__list-item btn btn--plain">Alteryx</li>
+          <li class="skills__list-item btn btn--plain">VBA</li>
           <li class="skills__list-item btn btn--plain">Git</li>
-          <li class="skills__list-item btn btn--plain">Material UI</li>
-          <li class="skills__list-item btn btn--plain">Jest</li>
-          <li class="skills__list-item btn btn--plain">Enzyme</li>
-          <li class="skills__list-item btn btn--plain">CI/CD</li>
+          <li class="skills__list-item btn btn--plain">Jupyter</li>
+          <li class="skills__list-item btn btn--plain">Bloomberg</li>
         </ul>
       </section>
 
