--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           </div>
 
           <div class="project">
-            <h3>Breakout/Momentum Algotrading Strategy</h3>
+            <h3>Algorithmic Trading</h3>
             <p class="project__description">
               Bollinger squeeze strategy incorporating Keltner Channels. Algorithm identifies periods of low volatility 
               for an asset, generating buy/sell signals based on subsequent price breakout directions.
