--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           <div class="project">
             <h3>Option Pricing GUIs</h3>
             <p class="project__description">
-              GUIs to price plain vanilla European and digital options using the Black-Scholes model
+              GUIs to price plain vanilla European and digital options using the Black-Scholes model.
             </p>
             <ul class="project__stack">
               <li class="project__stack-item">Python</li>
