--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="styles.css" />
     <title>Andy Leo</title>
   </head>
-  <body class="dark" id="top">
+  <body class="light" id="top">
     <header class="header center">
       <h3>
         <a href="https://github.com/anlydeo" class="link"
