--- a/index.html
+++ b/index.html
@@ -53,11 +53,13 @@
       <!-- About -->
       <div class="about center">
         <h1><span class="about__name">Andy Leo</span></h1>
-        <h2 class="about__role">Finance Undergraduate</h2>
+        <h2 class="about__role">Statistics & Data Science</h2>
         <p class="about__desc">
-          I am keen to pursue graduate studies in Computer/Data Science and Computational Finance. 
-          Proficient in Python, I am actively expanding my skill set by learning R and C#. 
-          I also have experience with Stata and SQL.
+          Hey there! I'm a graduate student at Cornell University studying Applied Statistics & Data Science. 
+          For my undergraduate studies, I majored in Finance at the London School of Economics.
+          I'm experienced in Python and currently learning Java and C#; I also have experience with R, Stata, and SQL.
+          In addition to my proficiency in applied maths, I also have a strong understanding of data structures and algorithms through self-learning and extracurriculars.
+          I'm actively seeking internship opportunities in Data Science/Software Engineering as well as in Quantitative Finance.
         </p>
 
         <div class="about__contact center">
@@ -67,6 +69,14 @@
             class="link link--icon"
           >
             <i aria-hidden="true" class="fab fa-github"></i>
+          </a>
+
+          <a 
+            href="www.linkedin.com/in/andyjjleo" 
+            aria-label="linkedin" 
+            class="link link--icon"
+          >
+            <i aria-hidden="true" class="fab fa-linkedin"></i>
           </a>
         </div>
       </div>
@@ -79,8 +89,8 @@
           <div class="project">
             <h3>S&P 500 Prediction</h3>
             <p class="project__description">
-              Analyse sentiment for tweets mentioning COVID-19 to see whether sentiment
-              is a good predictor for the 2020 S&P 500 crash.
+              Analyse sentiment for tweets mentioning COVID-19 to observe how sentiment towards COVID
+              was associated with the 2020 S&P 500 crash.
             </p>
             <ul class="project__stack">
               <li class="project__stack-item">Python</li>
@@ -98,8 +108,8 @@
           <div class="project">
             <h3>Algorithmic Trading</h3>
             <p class="project__description">
-              Bollinger squeeze strategy incorporating Keltner Channels. Algorithm identifies periods of low volatility 
-              for an asset, generating buy/sell signals based on subsequent price breakout directions.
+              Bollinger squeeze strategy incorporating Keltner Channels. Algorithm identifies periods of low volatility, 
+              generating buy/sell signals based on subsequent price breakout directions.
             </p>
             <ul class="project__stack">
               <li class="project__stack-item">Python</li>
@@ -115,7 +125,7 @@
           </div>
 
           <div class="project">
-            <h3>Option Pricing GUIs</h3>
+            <h3>Option Pricing GUI</h3>
             <p class="project__description">
               GUIs to price plain vanilla European and digital options using the Black-Scholes model.
             </p>
@@ -140,15 +150,11 @@
         <ul class="skills__list">
           <li class="skills__list-item btn btn--plain">Python</li>
           <li class="skills__list-item btn btn--plain">R</li>
-          <li class="skills__list-item btn btn--plain">Stata</li>
           <li class="skills__list-item btn btn--plain">SQL</li>
           <li class="skills__list-item btn btn--plain">C#</li>
+          <li class="skills__list-item btn btn--plain">Java</li>
           <li class="skills__list-item btn btn--plain">Power BI</li>
           <li class="skills__list-item btn btn--plain">Alteryx</li>
-          <li class="skills__list-item btn btn--plain">VBA</li>
-          <li class="skills__list-item btn btn--plain">Git</li>
-          <li class="skills__list-item btn btn--plain">Jupyter</li>
-          <li class="skills__list-item btn btn--plain">Bloomberg</li>
         </ul>
       </section>
 
