--- a/index.html
+++ b/index.html
@@ -55,11 +55,13 @@
         <h1><span class="about__name">Andy Leo</span></h1>
         <h2 class="about__role">Statistics & Data Science</h2>
         <p class="about__desc">
-          Hey there! I'm a graduate student at Cornell University studying Applied Statistics & Data Science. 
-          For my undergraduate studies, I majored in Finance at the London School of Economics.
-          I'm experienced in Python and currently learning Java and C#; I also have experience with R, Stata, and SQL.
-          In addition to my proficiency in applied maths, I also have a strong understanding of data structures and algorithms through self-learning and extracurriculars.
-          I'm actively seeking internship opportunities in Data Science/Software Engineering as well as in Quantitative Finance.
+          Hey there! I'm a Cornell University grad student studying Applied Statistics & Data Science.
+          I was previously a Finance undergrad at the London School of Economics. 
+          I'm proficient in CS principles like data structures and algorithms through self-learning.
+        </p>
+
+        <p class="about__desc">
+          Currently seeking internship opportunities in Data Science/Software Engineering as well as in Quantitative Finance.
         </p>
 
         <div class="about__contact center">
@@ -72,7 +74,7 @@
           </a>
 
           <a 
-            href="www.linkedin.com/in/andyjjleo" 
+            href="https://linkedin.com/in/andyjjleo" 
             aria-label="linkedin" 
             class="link link--icon"
           >
