--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
         <div class="projects__grid">
           <div class="project">
-            <h3>S&P 500 Prediction</h3>
+            <h3>S&P 500 during COVID</h3>
             <p class="project__description">
               Analyse sentiment for tweets mentioning COVID-19 to observe how sentiment towards COVID
               was associated with the 2020 S&P 500 crash.
